<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.RecognizeTextFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding = "10dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/takePictureBtn"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                app:icon="@drawable/ic_baseline_add_a_photo_24"
                android:text="@string/recognize_text_pick_image"
                android:backgroundTint="@color/black"
                android:textAllCaps="false"
                android:layout_height="wrap_content"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/recognizeTextBtn"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                app:icon="@drawable/ic_baseline_document_scanner_24"
                android:layout_marginStart="5dp"
                android:text="@string/recognize_text_recoginize"
                android:textAllCaps="false"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_image_24"
                    android:adjustViewBounds="true"
                    app:strokeWidth="2dp"
                    android:id="@+id/imageIv"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/recognize_text_before_result"
                    style="@style/TextAppearance.MaterialComponents.Headline6"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/recognizeTextEdit"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp"
                    android:weightSum="2">
                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/recoginize_text_ok"
                        android:layout_weight="1"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="80dp"
                        android:id="@+id/finishBtn"
                        android:backgroundTint="@color/black"
                        android:layout_gravity="center_horizontal"/>
                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/recognize_text_copy"
                        android:layout_weight="1"
                        android:layout_marginEnd="30dp"
                        android:id="@+id/copyBtn"
                        android:backgroundTint="@color/black"
                        android:layout_gravity="center_horizontal"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</FrameLayout>